k8s/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lecket-ui
  name: lecket-ui
  namespace: lecket-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lecket-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lecket-ui
    spec:
      containers:
        - image: insistglobal/afrijula:dev-108
          imagePullPolicy: Always
          name: lecket-ui
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lecket-ui-svc
  labels:
    app: lecket-ui-svc
  namespace: lecket-dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: lecket-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: lecket-ui-ingress
  namespace: lecket-dev
spec:
  rules:
    - host: lecket.gm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lecket-ui-svc
                port:
                  number: 80
    - host: www.lecket.gm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lecket-ui-svc
                port:
                  number: 80
  tls:
    - hosts:
        - lecket.gm
        - www.lecket.gm
      secretName: lecket-ui-tls
